--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
 <body>
 <h1>Weather Data API</h1>
 <p>URL format: http://127.0.0.1:5000/api/v1/station/date</p>
-<p>URL Example: http://127.0.0.1:5000/api/v1/21/19991127</p>
+<p>URL Example: http://127.0.0.1:5000/api/v1/21/1999-11-27</p>
 
 </body>
 </html>
